# walrus

./: .gitignore  404.html  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  _typos.toml  index.html  install.sh  introduction.html  manifesto.html  print.html  searcher-c2a407aa.js  searchindex-1aa98a70.js  searchindex-4e3917c0.js  searchindex-853a3b5b.js  searchindex-86ebca6a.js  searchindex-9b85eef6.js  searchindex-d035661f.js  searchindex-fa8bbddb.js  toc-740b34d7.js  toc-7813c9dc.js  toc-ec115bf0.js  toc.html
app/cli/: Cargo.toml
app/cli/src/: cli.rs  config.rs  direct.rs  lib.rs  prefs.rs  repl.rs  runner.rs  terminal.rs
app/cli/src/cmd/: agent.rs  attach.rs  chat.rs  config.rs  memory.rs  mod.rs  send.rs  serve.rs
app/cli/src/runner/: direct.rs  gateway.rs  mod.rs
app/cli/tests/: cli.rs  cmd.rs  gateway.rs  parse.rs  prefs.rs  runner.rs
app/client/: Cargo.toml
app/client/src/: connection.rs  lib.rs
app/client/tests/: client.rs  config.rs  connection.rs
app/daemon/: Cargo.toml
app/daemon/src/: config.rs  lib.rs  provider.rs
app/daemon/src/channel/: router.rs
app/daemon/src/feature/: cron.rs  memory.rs  mod.rs
app/daemon/src/gateway/: builder.rs  mod.rs  serve.rs  uds.rs
app/daemon/tests/: backend.rs  config.rs  cron.rs  gateway.rs  router.rs
app/flutter/: Cargo.toml
app/flutter/src/: ffi.rs  lib.rs  server.rs
app/gateway/: Cargo.toml
app/gateway/src/: api_key.rs  backend.rs  builder.rs  config.rs  dispatch.rs  hook.rs  lib.rs  provider.rs  state.rs  utils.rs  ws.rs
app/gateway/src/channel/: auth.rs  key.rs  mod.rs  router.rs
app/gateway/src/feature/: cron.rs
app/gateway/src/gateway/: builder.rs  mod.rs  serve.rs  uds.rs  ws.rs
app/gateway/src/protocol/: builder.rs  mod.rs  session.rs  ws.rs
app/gateway/tests/: auth.rs  backend.rs  config.rs  cron.rs  gateway.rs  protocol.rs  router.rs  session.rs  ws.rs
app/protocol/: Cargo.toml
app/protocol/src/: codec.rs  lib.rs
app/protocol/tests/: codec.rs  management.rs  protocol.rs
app/provider/: Cargo.toml
app/provider/src/: config.rs  lib.rs  manager.rs  provider.rs
app/provider/tests/: build_provider.rs  config.rs  manager.rs
apps/crabup/: Cargo.toml
apps/crabup/src/: cargo.rs  lib.rs  list.rs  ps.rs  registry.rs  service.rs
apps/daemon/: Cargo.toml  README.md
apps/daemon/src/: attach.rs  foreground.rs  lib.rs
apps/discord/: Cargo.toml  README.md
apps/discord/src/: lib.rs
apps/discord/src/cmd/: mod.rs  serve.rs
apps/discord/src/discord/: command.rs  mod.rs
apps/gateway/: Cargo.toml
apps/gateway/src/: config.rs  lib.rs  spawn.rs
apps/gateway/src/cmd/: mod.rs  serve.rs
apps/gateway/src/discord/: command.rs
apps/gateway/src/telegram/: command.rs
apps/hub/: Cargo.toml  README.md
apps/hub/src/: lib.rs  manifest.rs  package.rs
apps/memory/: Cargo.toml  README.md
apps/memory/prompts/: extract.md  memory.md
apps/memory/src/: config.rs  dispatch.rs  embedder.rs  lance.rs  lib.rs  tool.rs
apps/memory/src/cmd/: mod.rs  serve.rs
apps/outlook/: Cargo.toml
apps/outlook/src/: mcp.rs
apps/outlook/src/cmd/: mod.rs
apps/search/: Cargo.toml  README.md
apps/search/src/: aggregator.rs  cache.rs  config.rs  lib.rs  tool.rs
apps/search/src/cmd/: mod.rs  serve.rs
apps/search/src/engine/: bing.rs  brave.rs  mod.rs
apps/search/tests/: aggregator.rs
apps/telegram/: Cargo.toml  README.md
apps/telegram/src/: lib.rs  serve.rs
apps/telegram/src/cmd/: mod.rs  serve.rs
apps/telegram/src/telegram/: command.rs  markdown.rs  mod.rs
apps/wechat/: Cargo.toml  README.md
apps/wechat/src/: api.rs  lib.rs  serve.rs
crates/agent/: Cargo.toml  README.md
crates/agent/src/: agent.rs  chat.rs  lib.rs  memory.rs  provider.rs  team.rs
crates/bench/: Cargo.toml  Dockerfile.bench  Dockerfile.mock-mcp  docker-compose.yml
crates/bench/benches/: agent.rs  bm25.rs  conversation.rs  framework.rs  session.rs  session_search.rs
crates/bench/src/: lib.rs  mock_mcp.rs  task.rs
crates/bench/src/gateway/: crabtalk.rs  hermes.rs  mod.rs  openclaw.rs  opencode.rs
crates/candle/: Cargo.toml
crates/candle/examples/: llama.rs
crates/candle/src/: device.rs  inference.rs  lib.rs  loader.rs  model.rs  processor.rs
crates/candle/src/processor/: config.rs  mod.rs  sample.rs
crates/candle/src/stream/: mod.rs  prompt.rs
crates/channel/: Cargo.toml
crates/channel/src/: command.rs  config.rs  lib.rs  message.rs  spawn.rs
crates/channel/tests/: telegram.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: chat.rs  config.rs  lib.rs  tui.rs
crates/command/: Cargo.toml  README.md
crates/command-codegen/: Cargo.toml  README.md
crates/command-codegen/src/: lib.rs
crates/command/src/: lib.rs
crates/core/: Cargo.toml  README.md  build.rs
crates/core/prompts/: memory.md
crates/core/proto/: crabtalk.proto  ext.proto  protocol.proto  walrus.proto  whs.proto
crates/core/src/: agent.rs  channel.rs  chat.rs  config.rs  dispatch.rs  embedder.rs  event.rs  layer.rs  lib.rs  memory.rs  message.rs  paths.rs  provider.rs  response.rs  skill.rs  storage.rs  stream.rs  team.rs  template.rs  tool.rs
crates/core/tests/: agent.rs  channel.rs  conversation.rs  embedder.rs  history_pinning.rs  limits.rs  memory.rs  message.rs  request.rs  response.rs  runtime.rs  session.rs  skill.rs  tool_call.rs  tool_registry.rs
crates/crabtalk/: Cargo.toml  config.toml  settings.toml
crates/crabtalk/prompts/: memory.md  sessions.md  topic.md
crates/crabtalk/src/: lib.rs
crates/crabtalk/tests/: config.rs  file.rs  mcps.rs  memory.rs
crates/cydonia/: Cargo.toml  README.md
crates/cydonia/src/: lib.rs
crates/daemon/: Cargo.toml  README.md  config.toml  crab.toml
crates/daemon/prompts/: crab.md  extract-facts.md  memory.md  skill-master.md  walrus.md
crates/daemon/src/: cron.rs  event_bus.rs  lib.rs  provider.rs
crates/daemon/tests/: config.rs  config_parsing.rs  memory.rs
crates/gateway/: Cargo.toml  README.md
crates/gateway/src/: client.rs  command.rs  config.rs  lib.rs  message.rs  stream.rs
(+790 files in other folders)
