[workspace]
resolver = "3"
members = ["apps/*", "crates/*"]

[workspace.package]
version = "0.0.15"
edition = "2024"
authors = ["clearloop <tianyi.gc@gmail.com>"]
license = "GPL-3.0"
repository = "https://github.com/crabtalk/crabtalk"
keywords = ["llm", "agent", "ai"]

[workspace.dependencies]
crabhub = { path = "apps/hub", package = "crabhub", version = "0.0.15" }
crabtalk-telegram = { path = "apps/telegram", version = "0.0.15" }
crabtalk-wechat = { path = "apps/wechat", version = "0.0.15" }
gateway = { path = "crates/gateway", package = "crabtalk-gateway", version = "0.0.15" }
cli = { path = "crates/cli", package = "crabtalk", version = "0.0.15" }
daemon = { path = "crates/daemon", package = "crabtalk-daemon", version = "0.0.15" }
runtime = { path = "crates/runtime", package = "crabtalk-runtime", version = "0.0.15" }
model = { path = "crates/model", package = "crabtalk-model", version = "0.0.15" }
transport = { path = "crates/transport", package = "crabtalk-transport", version = "0.0.15" }
wcore = { path = "crates/core", package = "crabtalk-core", version = "0.0.15" }
crabtalk-command = { path = "crates/command", version = "0.0.15" }
crabtalk-command-codegen = { path = "crates/command-codegen", version = "0.0.15" }
woutlook = { path = "apps/outlook", package = "crabtalk-outlook", version = "0.0.15", default-features = false }
wsearch = { path = "apps/search", package = "crabtalk-search", version = "0.0.15", default-features = false }

# crabllm
crabllm-core = "0.0.7"
crabllm-provider = "0.0.7"

# crates.io
base64 = "0.22"
qr2term = "0.3"
anyhow = "1"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
async-stream = "0.3"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
console = "0.15"
crossterm = { version = "0.28", features = ["event-stream"] }
dialoguer = "0.11"
dirs = "6"
heck = "0.5"
indicatif = "0.18"
futures-core = "0.3"
openssl = { version = "0.10", features = ["vendored"] }
futures-util = "0.3"
lru = "0.14"
percent-encoding = "2"
rand = "0.9"
ratatui = "0.29"
scraper = "0.22"
prost = "0.13"
prost-build = "0.13"
reqwest = { version = "0.13", default-features = false, features = [
    "json",
    "query",
    "stream",
    "rustls",
] }
rmcp = { version = "0.16", features = [
    "auth",
    "client",
    "transport-child-process",
    "server",
    "macros",
    "transport-streamable-http-server",
] }
open = "5"
async-trait = "0.1"
axum = { version = "0.8", default-features = false, features = [
    "http1",
    "query",
    "tokio",
] }
schemars = "1.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
syntect = { version = "5", default-features = false, features = [
    "default-fancy",
] }
termimad = "0.34"
thiserror = "2"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "signal",
    "io-util",
    "io-std",
    "net",
    "sync",
    "time",
] }
teloxide = { version = "0.17", default-features = false, features = ["rustls"] }
textwrap = "0.16"
toml = "0.8"
toml_edit = "0.22"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2"

[profile.prod]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = false
debug-assertions = false
overflow-checks = false
strip = true
