[workspace]
resolver = "3"
members = ["apps/*", "crates/*", "plugins/*"]

[workspace.package]
version = "0.0.20"
edition = "2024"
authors = ["clearloop <tianyi.gc@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/crabtalk/crabtalk"
keywords = ["llm", "agent", "ai"]

[workspace.dependencies]
plugin = { path = "plugins/plugins", package = "crabtalk-plugins", version = "0.0.20" }
telegram = { path = "apps/telegram", package = "crabtalk-telegram", version = "0.0.20" }
wechat = { path = "apps/wechat", package = "crabtalk-wechat", version = "0.0.20" }
sdk = { path = "apps/sdk", package = "crabtalk-sdk", version = "0.0.20" }
tui = { path = "apps/tui", package = "crabtalk-tui", version = "0.0.20" }
crabtalk = { path = "crates/crabtalk", package = "crabtalk", version = "0.0.20", default-features = false }
crabtalkd = { path = "apps/daemon", package = "crabtalkd", version = "0.0.20" }
runtime = { path = "crates/runtime", package = "crabtalk-runtime", version = "0.0.20" }
transport = { path = "crates/transport", package = "crabtalk-transport", version = "0.0.20" }
wcore = { path = "crates/core", package = "crabtalk-core", version = "0.0.20" }
memory = { path = "crates/memory", package = "crabtalk-memory", version = "0.0.20" }
command = { path = "plugins/command", package = "crabtalk-command", version = "0.0.20" }
command-codegen = { path = "plugins/command-codegen", package = "crabtalk-command-codegen", version = "0.0.20" }
outlook = { path = "plugins/outlook", package = "crabtalk-outlook", version = "0.0.20", default-features = false }
search = { path = "plugins/search", package = "crabtalk-search", version = "0.0.20", default-features = false }

# crabllm
crabllm-core = "0.0.15"
crabllm-provider = "0.0.15"

# bench
criterion = { version = "0.5", features = ["html_reports"] }

# crates.io
base64 = "0.22"
bytes = "1"
qr2term = "0.3"
anyhow = "1"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
async-stream = "0.3"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
cron = "0.16"
console = "0.15"
crossterm = { version = "0.28", features = ["event-stream"] }
dialoguer = "0.11"
dirs = "6"
heck = "0.5"
indicatif = "0.18"
futures-core = "0.3"
futures-util = "0.3"
lru = "0.14"
percent-encoding = "2"
rand = "0.9"
ratatui = "0.29"
scraper = "0.22"
prost = "0.13"
prost-build = "0.13"
reqwest = { version = "0.13", default-features = false, features = [
    "json",
    "query",
    "stream",
    "native-tls",
] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rmcp = { version = "1.3", default-features = false }
axum = { version = "0.8", default-features = false, features = [
    "http1",
    "query",
    "tokio",
] }
parking_lot = "0.12"
schemars = "1.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
termimad = "0.34"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "signal",
    "io-util",
    "io-std",
    "net",
    "sync",
    "time",
] }
teloxide = { version = "0.17", default-features = false, features = ["rustls"] }
textwrap = "0.16"
toml = "0.8"
toml_edit = "0.22"
tracing = "0.1"
ulid = { version = "1", features = ["serde"] }
tracing-subscriber = "0.3"
url = "2"

[profile.prod]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = false
debug-assertions = false
overflow-checks = false
strip = true

[workspace.metadata.conta]
ignore = []
