[package]
name = "walrus-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
protocol = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
futures-core = { workspace = true }
async-stream = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
