[package]
name = "walrus-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[[bin]]
name = "walrusd"
path = "src/bin/main.rs"

[dependencies]
runtime = { workspace = true }
wcore = { workspace = true }
provider = { workspace = true }
sqlite = { workspace = true }
llm = { workspace = true }
protocol = { workspace = true }
compact_str = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
smallvec = { workspace = true }
cron = { workspace = true }
chrono = { workspace = true }
rmcp = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
