[package]
name = "walrus-flutter"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
gateway = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
