[package]
name = "walrus-provider"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
llm = { workspace = true }
deepseek = { workspace = true }
openai = { workspace = true }
claude = { workspace = true }
local = { workspace = true, optional = true }
mistralrs = { workspace = true, optional = true }
compact_str = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
async-stream = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }

[features]
default = ["local"]
local = ["dep:local", "dep:mistralrs"]

[dev-dependencies]
serde_json = { workspace = true }
