[package]
name = "crabtalkd"
description = "Crabtalk daemon — AI agent platform"
documentation = "https://docs.rs/crabtalk"
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[[bin]]
name = "crabtalkd"
path = "src/bin/main.rs"

[dependencies]
crabtalk.workspace = true
transport.workspace = true
wcore.workspace = true

# crates.io
anyhow.workspace = true
async-stream.workspace = true
clap.workspace = true
dialoguer.workspace = true
futures-core.workspace = true
futures-util.workspace = true

serde_json.workspace = true
tokio.workspace = true
toml_edit.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[features]
default = ["native-tls"]
native-tls = ["crabtalk/native-tls"]
rustls = ["crabtalk/rustls"]
