[package]
name = "crabtalk-gateway"
description = "Gateway library for Crabtalk platform adapters"
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
anyhow.workspace = true
dirs.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
transport.workspace = true
tracing.workspace = true

wcore.workspace = true
