[package]
name = "walrus-memory"
description = "Graph-based memory service for walrus agents"
keywords = ["memory", "knowledge-graph", "embeddings"]
categories = ["database"]
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "wmemory"
path = "src/bin/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
serve = ["dep:wcore", "dep:schemars", "dep:prost", "dep:anyhow"]
cli = ["dep:clap", "dep:tracing-subscriber", "serve"]

[dependencies]
anyhow = { workspace = true, optional = true }
arrow-array.workspace = true
arrow-schema.workspace = true
candle-core.workspace = true
candle-nn.workspace = true
candle-transformers.workspace = true
chrono.workspace = true
clap = { workspace = true, optional = true }
compact_str.workspace = true
futures.workspace = true
hf-hub.workspace = true
lance-graph.workspace = true
lancedb.workspace = true
prost = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
tokenizers.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, optional = true }
wcore = { workspace = true, optional = true }
