[package]
name = "walrus-search"
description = "Meta search engine CLI with aggregated results from multiple backends"
keywords = ["search", "meta-search", "cli", "web-scraping"]
categories = ["command-line-utilities", "web-programming"]
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "walrus-search"
path = "src/bin/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
serve = ["dep:wcore", "dep:schemars", "dep:prost", "dep:anyhow"]
cli = ["dep:clap", "dep:tracing-subscriber", "serve"]

[dependencies]
anyhow = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
lru.workspace = true
prost = { workspace = true, optional = true }
rand.workspace = true
reqwest.workspace = true
schemars = { workspace = true, optional = true }
scraper.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, optional = true }
url.workspace = true
wcore = { workspace = true, optional = true }
percent-encoding.workspace = true
