[package]
name = "crabtalk-search"
description = "Meta search engine CLI with aggregated results from multiple backends"
keywords = ["search", "meta-search", "cli", "web-scraping"]
categories = ["command-line-utilities", "web-programming"]
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "crabtalk-search"
path = "src/bin/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["dep:clap", "dep:tracing-subscriber"]
mcp = ["dep:rmcp", "dep:schemars", "dep:axum", "dep:crabtalk-command", "dep:anyhow", "cli"]

[dependencies]
base64.workspace = true
clap = { workspace = true, optional = true }
lru.workspace = true
rand.workspace = true
reqwest.workspace = true
scraper.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, optional = true }
url.workspace = true
percent-encoding.workspace = true
anyhow = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
crabtalk-command = { workspace = true, features = ["mcp"], optional = true }
rmcp = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }
