[package]
name = "walrus-telegram"
description = "Telegram bot gateway for OpenWalrus agents"
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[[bin]]
name = "walrus-telegram"
path = "src/bin/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["dep:clap", "dep:tracing-subscriber"]

[dependencies]
anyhow.workspace = true
clap = { workspace = true, optional = true }
compact_str.workspace = true
futures-util.workspace = true
gateway.workspace = true
serde_json.workspace = true
teloxide.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, optional = true }
wcore.workspace = true
