[package]
name = "crabtalk-telegram"
description = "Telegram gateway for Crabtalk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[[bin]]
name = "crabtalk-telegram"
path = "src/bin/main.rs"

[dependencies]
gateway.workspace = true
wcore.workspace = true
transport.workspace = true
crabtalk-command.workspace = true

anyhow.workspace = true
clap.workspace = true
dialoguer.workspace = true
futures-util.workspace = true
teloxide.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
