[package]
name = "crabtalk-wechat"
description = "WeChat gateway for Crabtalk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[[bin]]
name = "crabtalk-wechat"
path = "src/bin/main.rs"

[dependencies]
sdk.workspace = true
wcore.workspace = true
transport.workspace = true
command.workspace = true

anyhow.workspace = true
base64.workspace = true
clap.workspace = true
parking_lot.workspace = true
qr2term.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio.workspace = true
tracing.workspace = true
