[package]
name = "cydonia-agent"
description = "Cydonia agent library"
documentation = "https://docs.rs/cydonia-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
llm.workspace = true
