[package]
name = "crabtalk-bench"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
wcore = { workspace = true, features = ["testing"] }
crabtalk.workspace = true
memory.workspace = true
runtime.workspace = true
crabllm-core.workspace = true
criterion.workspace = true
parking_lot.workspace = true
prost.workspace = true
tokio.workspace = true
serde_json.workspace = true
tempfile.workspace = true
futures-util.workspace = true

[[bench]]
name = "bm25"
harness = false

[[bench]]
name = "codec"
harness = false

[[bench]]
name = "conversation"
harness = false

[[bench]]
name = "agent"
harness = false

[[bench]]
name = "session_search"
harness = false
