[package]
name = "cydonia-candle"
version = "0.0.0"
edition = "2021"
description = "Cydonia candle utils re-exports"

[dependencies]
anyhow.workspace = true
candle-core.workspace = true
candle-nn.workspace = true
candle-transformers.workspace = true
ccore.workspace = true
hf-hub.workspace = true
rand.workspace = true
serde.workspace = true
tokenizers.workspace = true
tracing.workspace = true

[features]
accelerate = [
    "candle-core/accelerate",
    "candle-nn/accelerate",
    "candle-transformers/accelerate",
]

[target.'cfg(target = "aarch64-apple-darwin")'.dependencies]
candle-core = { workspace = true, features = ["accelerate"] }
candle-nn = { workspace = true, features = ["accelerate"] }
candle-transformers = { workspace = true, features = ["accelerate"] }
