[package]
name = "walrus-channel"
description = "Walrus channel adapters"
documentation = "https://docs.rs/walrus-channel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
wcore.workspace = true

# crates-io dependencies
anyhow.workspace = true
async-stream.workspace = true
compact_str.workspace = true
futures-core.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
