[package]
name = "walrus-channel"
description = "Platform-agnostic messaging channel abstraction for OpenWalrus agents"
documentation = "https://docs.rs/walrus-channel"
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
wcore.workspace = true
compact_str.workspace = true
futures-util.workspace = true
serde.workspace = true
serenity.workspace = true
teloxide.workspace = true
tokio.workspace = true
tracing.workspace = true
