[package]
name = "crabtalk"
description = "Run autonomous agents with built-in LLM inference"
documentation = "https://docs.rs/crabtalk"
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[[bin]]
name = "crabtalk"
path = "src/bin/main.rs"

[dependencies]
crabhub.workspace = true
crabtalk-command.workspace = true
daemon.workspace = true
transport.workspace = true
wcore.workspace = true

# crates.io
anyhow.workspace = true
chrono.workspace = true
dirs.workspace = true
async-stream.workspace = true
clap.workspace = true
console.workspace = true
crossterm.workspace = true
dialoguer.workspace = true
futures-core.workspace = true
futures-util.workspace = true
heck.workspace = true
indicatif.workspace = true
ratatui.workspace = true
rustyline.workspace = true
serde_json.workspace = true
syntect.workspace = true
termimad.workspace = true
tokio.workspace = true
toml.workspace = true
toml_edit.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
